Fix random white space of overflowed items.

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,14 @@ body {
   line-height: 1.5;
   color: var(--color-body);
 }
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: clip;
+}
 
 h1,
 h2,
